# ColorfulOutput

./: CHANGELOG.md  ConsoleColors.py  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish-pypi.yml
ColorfulOutput/: ColorfulOutput.py  __init__.py
ColorfulOutput/Testing/: test2.py  test3.py  test4.py  test5.py
ConsoleColors/: __init__.py
Images/Logo/: ColorfulOutputLogo.psd  ConsoleColorsLogo.psd
Logo/: ConsoleColorsLogo.psd
Testing/: test1.py
