[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"    
]
build-backend = "setuptools.build_meta"

[project]
name = "ConsoleColors"
version = "0.0.1"
authors = [
  { name="Rasmus Ohert", email="rassemichael@gmail.com" },
]
description = "Adds colors to your console prints."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"GitHub" = "https://github.com/RasseTheBoy/ConsoleColors"