[metadata]
name = ConsoleColors
version = 0.0.1
author = Rasmus Ohert
author_email = rassemichael@gmail.com
description = Adds colors to your console prints.
long_description = A python library that adds colors to your console prints.
url = https://github.com/RasseTheBoy/ConsoleColors
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    
[options]
packages = find:
python_requires = >=3.5